Fixes gap below navbar and callout containers by adding padding-bottom to 10px on .fixed-top improves UX

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,10 @@ h6 {
     font-weight: 700;
 }
 
-p, .benefits li, .card-lists li, .card-body p {
+p,
+.benefits li,
+.card-lists li,
+.card-body p {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
@@ -34,6 +37,11 @@ body {
 
 /* paddings/margins/borders */
 
+/*----Pushes 1st html element below navbar down, to avoid being covered by the fixed navbar----*/
+
+.fixed-top {
+    padding-bottom: 10px;
+}
 
 
 
@@ -61,6 +69,7 @@ main {
 */
 
 /* Containers */
+
 /* Containers' code is based on code from the Whiskey Drop lesson*/
 
 .callout-container {
@@ -128,7 +137,7 @@ main {
 
 .btn-terms-conditions:focus {
     -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
 }
 
 .btn-read-more {
@@ -158,9 +167,9 @@ main {
 
 .mission {
     display: block;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(76,101,138,0)), to(rgba(133,172,254,0.6)));
-    background-image: -o-linear-gradient(top, rgba(76,101,138,0), rgba(133,172,254,0.6));
-    background-image: linear-gradient(to bottom, rgba(76,101,138,0), rgba(133,172,254,0.6));
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(76, 101, 138, 0)), to(rgba(133, 172, 254, 0.6)));
+    background-image: -o-linear-gradient(top, rgba(76, 101, 138, 0), rgba(133, 172, 254, 0.6));
+    background-image: linear-gradient(to bottom, rgba(76, 101, 138, 0), rgba(133, 172, 254, 0.6));
 }
 
 
@@ -186,7 +195,6 @@ main {
 
 /* Cards */
 
-
 /* Footer */
 
 /* Social links + hover*/
@@ -202,11 +210,11 @@ main {
 /* transforms to real colour of icon, colors from https://www.webnots.com/color-codes-for-social-networking-site-icons/ */
 
 .fa-linkedin:hover {
-    color:  #0077b5;
+    color: #0077b5;
 }
 
 .fa-facebook-square:hover {
-    color:  #3b5998;
+    color: #3b5998;
 }
 
 
@@ -223,7 +231,6 @@ body {
 */
 
 /* Changes size of navbar-brand so is in proportion and does not wrap toggler icon on small devices */
-
 
 @media screen and (max-width: 576px) {
     .logo img {
@@ -295,7 +302,7 @@ p,
 /* Large devices (desktops, 992px and up) */
 
 @media (min-width: 992px) {
-    .navbar li{
+    .navbar li {
         font-size: 1.3rem;
     }
 }
